fixed spacing of hero/about sections on larger screens

--- a/src/index.css
+++ b/src/index.css
@@ -248,7 +248,7 @@ MEDIA QUERIES
     margin-top: -20rem;
   }
   .starfield {
-    max-height: 150%;
+    max-height: 107%;
   }
   .about {
     margin-top: 70rem;
@@ -275,7 +275,8 @@ MEDIA QUERIES
 
 @media (max-width: 2800px) {
   .about {
-    margin-top: 50rem;
+    margin-top: 40rem;
+    z-index: 10;
   }
   .designer {
     margin-right: 24rem;
@@ -305,7 +306,7 @@ MEDIA QUERIES
     margin-top: 40rem;
   }
   .starfield {
-    max-height: 100%;
+    max-height: 90%;
   }
   .designer {
     margin-right: -1rem;
